--- a/src/app2/style.css
+++ b/src/app2/style.css
@@ -1,4 +1,12 @@
+#app2 {
+    position: relative;
+    width: 30%;
+    margin-right: 30px;
+}
 .angular {
-    background: red;
-    color: white
+    width: 100%;
+    background: #C3002F;
+    color: white;
+    padding: 10px;
+    text-align: center;
 }
